# web_server

./: .gitignore  CMakeLists.txt
cmake/: FindLibev.cmake
src/: demonize.c  fdpass.c  getnumcores.c  getnumcores.cpp  log.c  log.cpp  main.c  main.cpp  request.c  request.cpp  request.h  response.c  response.cpp  response.h  server.c  server.cpp  server.h  socket_fd.cpp  socket_fd.h  worker.c  worker.cpp
test/: index.html
